--- a/ApplicationLeclour/css/MainStyleSheet.css
+++ b/ApplicationLeclour/css/MainStyleSheet.css
@@ -20,3 +20,51 @@ label
     width:100px;
     float:left;
 }
+
+/*
+Ci-dessous, le CSS du menu principal, qui normalement, devrai s'appliquer sur pratiquement toutes les pages du projet.
+Le menu est extnsible pratiquement à volonté.
+Ceci dit, si vous voulez faire du zèle, vous pourrez vous pencher sur un problème très étrange, Chrome (et Firefox) 
+ont une facon un peu étrange de gerer la tailes des éléments de la liste (et ca fait fait planter mon graphisme).
+*/
+
+html{
+	background: url(sources/fondglobal.jpg) no-repeat;
+	
+}
+
+body{
+	margin: 0px;
+}
+
+.listemenu{
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+}
+
+.topmenu{
+	background: url(sources/casemenu.png);
+	width: 235px;
+	height: 42px;
+	margin: 0px;
+	background-repeat: inherit;
+}
+
+.corpsmenu{
+	background: url(sources/case.png);
+	width: 235px;
+	height: 42px;
+	text-align: center;
+	margin: 0px;
+	background-repeat: inherit;
+}
+
+
+.botmenu{
+	background: url(sources/botmenu.png);
+	width: 235px;
+	height: 15px;
+	margin: 0px;
+	background-repeat: inherit;
+}
