--- a/ApplicationLeclour/css/MainStyleSheet.css
+++ b/ApplicationLeclour/css/MainStyleSheet.css
@@ -34,7 +34,8 @@ html{
 }
 
 body{
-	margin: 0px;
+	background-color: gray;
+	background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 
 .listemenu{
@@ -67,4 +68,10 @@ body{
 	height: 15px;
 	margin: 0px;
 	background-repeat: inherit;
+}
+
+
+div:contenu{
+	float:left;
+	margin:100px 50px;
 }
