--- a/ApplicationLeclour/css/MainStyleSheet.css
+++ b/ApplicationLeclour/css/MainStyleSheet.css
@@ -21,6 +21,14 @@ label
     float:left;
 }
 
+#parametrageTarif label
+{
+    display:block;
+    width:200px;
+    float:left;
+}
+
+
 /*
 Ci-dessous, le CSS du menu principal, qui normalement, devrai s'appliquer sur pratiquement toutes les pages du projet.
 Le menu est extnsible pratiquement à volonté.
@@ -116,13 +124,13 @@ div.menu{
 
 div.centre{
 	margin:auto;
-	width:80%;
+	width:85%;
 }
 
 div.entreHeaderFooter{
 	width:100%;
 	float:left;
-	height:auto;
+	margin-bottom:50px;
 }
 
 input[type="submit"]
