--- a/ApplicationLeclour/css/MainStyleSheet.css
+++ b/ApplicationLeclour/css/MainStyleSheet.css
@@ -104,6 +104,14 @@ body{
 	background-repeat: inherit;
 }
 
+a.lienmenuactif{
+	text-decoration: none;
+	font-family: "Myriad Pro";
+	/*font-weight: bold;*/
+	letter-spacing: 0px;
+	color: rgb(255, 145, 13);
+}
+
 a.lienmenu{
 	text-decoration: none;
 	font-family: "Myriad Pro";
