--- a/ApplicationLeclour/css/MainStyleSheet.css
+++ b/ApplicationLeclour/css/MainStyleSheet.css
@@ -137,7 +137,12 @@ a.lienmenu:hover{
 div.header{
 	background : url(sources/banniere.jpg);
 	height:43px;
-	margin-bottom:40px;
+}
+div.bandeau{
+	margin-right:50px;
+	margin-top:10px;
+	text-align: right;
+	height:40px;
 }
 
 div.footer{
@@ -148,7 +153,7 @@ div.footer{
 }
 
 div.contenu{
-	padding-left:20px;
+	padding-left:10px;
 	height:auto;
 	float:left;
 	width:70%;
@@ -167,7 +172,7 @@ div.contenu{
 div.menu{
 	
 	width:25%;
-	height:400px;
+	height:auto;
 	float:left;
 	
 }
