Ajout Lorem ipsum

--- a/ApplicationLeclour/templates/help.html
+++ b/ApplicationLeclour/templates/help.html
@@ -6,6 +6,24 @@
 	<body>
 		<h1>Aide en ligne de l'application Monica</h1>
 			<h2>Administrateur</h2>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies enim at tortor placerat tincidunt. Fusce eu blandit est, vel blandit eros. Nulla ut risus laoreet, eleifend nisi ut, euismod mi. Morbi quis neque at neque ornare placerat. Nullam sollicitudin nunc sed nisi rhoncus tristique. Morbi et dui dolor. Donec eu feugiat nisi. Maecenas rutrum varius pellentesque.
+
+Integer adipiscing odio in risus consectetur, id blandit justo consectetur. Nullam eu mauris ac neque aliquet scelerisque. Fusce eleifend imperdiet diam, et vehicula erat dictum sit amet. Aenean arcu enim, egestas non luctus vitae, dignissim id lectus. Proin sit amet turpis tristique, hendrerit orci vel, pellentesque felis. Etiam semper turpis nec est fringilla, scelerisque semper enim faucibus. Ut pharetra felis vitae sollicitudin egestas. Fusce tincidunt, nulla vel auctor commodo, nunc nibh porttitor nulla, vel sollicitudin justo turpis id lacus. Nullam justo turpis, pharetra quis felis et, eleifend porta justo. Nullam est urna, sodales eu odio nec, convallis iaculis tellus.
+
+Nullam blandit, massa vitae vehicula semper, est quam tincidunt nibh, in adipiscing elit eros nec massa. Aenean malesuada augue vestibulum placerat molestie. Suspendisse potenti. Praesent lobortis diam enim, a iaculis neque viverra non. Vivamus tincidunt dignissim lacinia. Aenean scelerisque consectetur felis, molestie tempor sapien aliquet sagittis. Nam libero massa, eleifend id placerat sit amet, tempor nec nunc. Morbi molestie sem non magna gravida, facilisis fermentum ipsum tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+
+Fusce sed ante ut sem dictum dignissim. Suspendisse potenti. Pellentesque rutrum quam ut odio porttitor, vitae luctus turpis imperdiet. Donec eu metus arcu. Cras purus neque, viverra in convallis ac, molestie et eros. Nam vehicula purus dolor, eu convallis quam sodales dignissim. Ut placerat nisi et ligula malesuada, a fringilla nisl malesuada. Suspendisse potenti. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas porta pulvinar dui, vel pharetra magna hendrerit a. Nulla ultricies sollicitudin pharetra. Duis aliquet erat eu turpis pulvinar, tincidunt molestie tortor molestie. Aenean at sollicitudin erat.
+
+In accumsan nulla risus, quis porta nunc imperdiet at. Sed iaculis magna et mollis vehicula. Nulla porta posuere suscipit. Proin in arcu et elit sagittis consectetur sit amet quis justo. Duis vel malesuada enim. Phasellus malesuada, felis nec congue feugiat, urna velit accumsan est, at dictum sem justo et diam. Vivamus luctus erat vel euismod dignissim. Vivamus dapibus mi magna, in mattis mauris gravida nec. Integer fermentum mauris ut nulla sollicitudin posuere non quis purus. Donec ultrices dictum lectus in molestie.
 			<h2>Comptable</h2>
+			Integer adipiscing odio in risus consectetur, id blandit justo consectetur. Nullam eu mauris ac neque aliquet scelerisque. Fusce eleifend imperdiet diam, et vehicula erat dictum sit amet. Aenean arcu enim, egestas non luctus vitae, dignissim id lectus. Proin sit amet turpis tristique, hendrerit orci vel, pellentesque felis. Etiam semper turpis nec est fringilla, scelerisque semper enim faucibus. Ut pharetra felis vitae sollicitudin egestas. Fusce tincidunt, nulla vel auctor commodo, nunc nibh porttitor nulla, vel sollicitudin justo turpis id lacus. Nullam justo turpis, pharetra quis felis et, eleifend porta justo. Nullam est urna, sodales eu odio nec, convallis iaculis tellus.
+
+			
 			<h2>Chef de caisse</h2>
+			Fusce sed ante ut sem dictum dignissim. Suspendisse potenti. Pellentesque rutrum quam ut odio porttitor, vitae luctus turpis imperdiet. Donec eu metus arcu. Cras purus neque, viverra in convallis ac, molestie et eros. Nam vehicula purus dolor, eu convallis quam sodales dignissim. Ut placerat nisi et ligula malesuada, a fringilla nisl malesuada. Suspendisse potenti. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas porta pulvinar dui, vel pharetra magna hendrerit a. Nulla ultricies sollicitudin pharetra. Duis aliquet erat eu turpis pulvinar, tincidunt molestie tortor molestie. Aenean at sollicitudin erat.
+
+			
 			<h2>Personnel d'accueil</h2>
+			In accumsan nulla risus, quis porta nunc imperdiet at. Sed iaculis magna et mollis vehicula. Nulla porta posuere suscipit. Proin in arcu et elit sagittis consectetur sit amet quis justo. Duis vel malesuada enim. Phasellus malesuada, felis nec congue feugiat, urna velit accumsan est, at dictum sem justo et diam. Vivamus luctus erat vel euismod dignissim. Vivamus dapibus mi magna, in mattis mauris gravida nec. Integer fermentum mauris ut nulla sollicitudin posuere non quis purus. Donec ultrices dictum lectus in molestie.
+
+			
